--- a/px-to-rem/src/PxToRemConverter/PxToRemConverter.css
+++ b/px-to-rem/src/PxToRemConverter/PxToRemConverter.css
@@ -50,3 +50,12 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+@media (max-width:786px) {
+    .responsive{
+        flex-direction: column;
+        align-items: center;
+        gap: 16px !important;
+    }
+    
+}
